# whiteboard-rs

./: Cargo.toml
migrations/: 20250717151720_init.down.sql  20250717151720_init.up.sql
src/: main.rs  whiteboard.rs
src/socketio/: mod.rs  on_clear.rs  on_new_strokes.rs
static/: script.js  styles.css
static/css/: base.css  index.css  whiteboard.css
static/js/: base.js  index.js  tap.js  theme.js  whiteboard.js
