[package]
name = "whiteboard-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
maud = { version = "0.27.0", features = ["axum"] }
palette = { version = "0.7.6" }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
socketioxide = { version = "0.17.2", features = ["state"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
subtle = "2.6.1"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
